# publicai.co

./: .gitignore  CLAUDE.md  LICENSE  README.md  drizzle.config.ts  mdx-components.tsx  next.config.ts  package-lock.json  package.json  tailwing.config.js
agent/: Dockerfile  dialogue_agent.py  interview_prompt.md  livekit.toml  pyproject.toml  requirements.txt
migrations/: 0000_ancient_terror.sql
migrations/meta/: 0000_snapshot.json  _journal.json
rules/: neon-auth.mdc  neon-drizzle.mdc  neon-serverless.mdc
src/: middleware.ts  stack.tsx
src/app/: globals.css  layout.tsx  page.tsx
src/app/about/: page.mdx  page.tsx
src/app/airbus/: page.mdx  page.tsx
src/app/apertus/: page.mdx  page.tsx
src/app/chat/: page.tsx
src/app/contributing/: page.mdx  page.tsx
src/app/demo/: page.tsx
src/app/dialogue/: layout.tsx  page.tsx
src/app/docs/: page.mdx  page.tsx
src/app/faq/: page.mdx
src/app/huggingface/: page.mdx
src/app/login/: page.tsx
src/app/register/: page.tsx
src/app/stories/: page.tsx
src/app/tc/: page.mdx  page.tsx
src/app/utility/: page.mdx  page.tsx
src/components/: Article.tsx  CallToAction.tsx  ChatInterface.tsx  Footer.tsx  LandingChatInterface.tsx  PhotoFigure.tsx  SubstackBox.tsx  navbar.tsx
src/lib/: db.ts  kmeans.ts  languages.ts  news.ts  pca.ts  queries.ts  schema.ts  schulze.ts  session.ts  stories.ts
supabase/: config.toml  seed_split.sql  seed_survey_quotes.sql
supabase/migrations/: 20260412000001_snad_schema_v2.sql  20260412000002_split_deliberation_survey.sql  20260412000003_add_occupation.sql
(+82 files in other folders)
